--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "mount_file_id": "https://github.com/AaryanAnand10/Implant/blob/main/Untitled2.ipynb",
-      "authorship_tag": "ABX9TyN2gemWEseHHfcTE9757VGy",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
